# img2text-cli

./: .pre-commit-config.yaml  main.py  pyproject.toml
.github/workflows/: pypi_release.yml
src/img2text_cli/: main.py
